--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Henry Suh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -18,6 +19,7 @@
     "express-session": "^1.17.3",
     "graphql": "^15.7.2",
     "graphql-date": "^1.0.3",
+    "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0"
